# dnq-2048

./: .gitignore  AGENTS.md  Baseline DQN_for_2048_game.ipynb  LICENSE  README.md  optuna.db  pyproject.toml  run_best_from_root.sh
app/: __init__.py  double_dqn.py  dqn.py  dueling_double_dqn.py  dueling_q_network.py  eval.py  h_dqn.py  helpers.py  open_spiel_2048_env.py  optuna_tune.py  q_network.py  qr_dqn.py  qr_q_network.py  replay_buffer.py  run_survey_on_episodes_amount.py  run_with_best_hyper_params.py
notebooks/: Baseline DQN_for_2048_game.ipynb  Double DQN.ipynb  Dueling Double DQN.ipynb  H DQN.ipynb  QR DQN.ipynb
notebooks/output/double-dqn/: dqn.pt  eval_meta.json  eval_rollout.npz
notebooks/output/dqn/: dqn.pt  eval_meta.json  eval_rollout.npz
notebooks/output/dueling-double-dqn/: dqn.pt  eval_meta.json  eval_rollout.npz
output/double-dqn/: eval_meta.json  eval_rollout.npz
output/dqn/: dqn.pt  eval_meta.json
output/h-dqn/: dqn.pt
output/optuna/: best_hyperparams.md
output/optuna/double_dqn/: dqn.pt  eval_meta.json  eval_rollout.npz
output/optuna/dqn/: dqn.pt  eval_meta.json  eval_rollout.npz
output/optuna/dueling_double_dqn/: dqn.pt  eval_meta.json  eval_rollout.npz
output/optuna/h_dqn/: dqn.pt  eval_meta.json  eval_rollout.npz
output/optuna/qr_dqn/: dqn.pt  eval_meta.json  eval_rollout.npz
output/qr-dqn/: eval_meta.json
output/survey/: summary_all_models.json
output/survey/double-dqn/: summary_by_episodes.json
output/survey/dqn/: summary_by_episodes.json
output/survey/dueling-double-dqn/: summary_by_episodes.json
(+86 files in other folders)
