[project]
name = "dnq-2048"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imageio>=2.37.3",
    "matplotlib>=3.10.8",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "torchvision>=0.20.1",
    "tqdm>=4.67.3",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu121"
