[project]
name = "dnq-2048"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imageio>=2.37.3",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "open-spiel>=1.6.12",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "torchvision>=0.20.1",
    "tqdm>=4.66.5",
]

[tool.setuptools]
packages = ["app"]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu121"
